--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <footer>
         <section class="container">
             <div class="logo">
-                <img src="./media/logo.png" alt="">
+                <img src="./assets/images/spotify-logo.png" alt="">
             </div>
             <div class="links">
                 <div class="company">
