--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
             <nav class="mobile-menu">
-                <img src="./media/icons/hamburger-icon.jpg" alt="">
+                <img src="./assets/images/hamburger-menu.png" alt="">
             </nav>
         </div>
     </header>
@@ -44,7 +44,7 @@
     <footer>
         <section class="container">
             <div class="logo">
-                <img src="./assets/images/spotify-logo.png" alt="">
+                <img src="./assets/images/spotify-logo.png" alt="SPOTIFY">
             </div>
             <div class="links">
                 <div class="company">
