--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
                 </ul>
             </nav>
             <nav class="mobile-menu">
-                <img src="./assets/images/hamburger-menu.png" alt="">
+                <img
+                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAf0lEQVR4nGNgGAWDGph0mFWadpo/NO00f0YBfmjaZV6B0xIqWPAMih/gswSsiJLQMCVkBn180mVeQZU46TQvZxhQcI9Bs+0eg+bPewxa/8nHmiD9rfgsodACLRj+gccSiCLKQkMLvxn08kkrleKkhWFAgclo2YUERsuuUUBfAADFj8U5YqSGyQAAAABJRU5ErkJggg==">
             </nav>
         </div>
     </header>
 
     <main>
         <section class="banner">
-            <h1>Learning is<br>everything</h1>
+            <h1>Listening is<br>everything</h1>
             <p>Millions of songs and podcasts. No credit card needed.</p>
             <button>GET SPOTIFY FREE</button>
         </section>
